# translate-ocr-ai

./: .env.example  .gitignore  README.md  REFACTOR_SUMMARY.md  docker-compose.yml  postman_collection.json  requirements-vllm.txt  vbk-supervisord.conf
.claude/: settings.json
api/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
api/models/: schemas.py
api/preprocessing/: image.py
api/routers/: meta.py  ocr.py
api/services/: auth.py  cache.py  dictionary.py  translator.py  vllm_client.py
api/utils/: logging.py
monitoring/: prometheus.yml
ocr_service/: engine.py  main.py  manga_pipeline.py  paragraph_merger.py
postman/: RAPIDAPI_QUICKSTART.md  api.postman_collection.json  openapi.json  openapi.yaml  translate-openapi.json  translate-openapi.yaml  translate-rapidapi.json  translate-rapidapi.yaml
scripts/: build_voice_pack.py  check_services.sh  deploy.sh  deploy_phase1.sh  load_test_translate_json.mjs  run_api.sh  run_ocr_service.sh  run_translate_service.sh  run_tts_service.sh  run_vllm_translator.sh  smoke_test.sh  sync_to_server.sh  test_ocr_samples.py  warmup_paddleocr.py  watch_progress.sh
server/: .gitignore  README.md  deploy_key  deploy_key.pub  known_hosts.bak  server_info.md
tools/: gen_openapi.py  gen_postman.py  gen_rapidapi_translate.py  (+1 more)
translate_service/: config.py  main.py  pyproject.toml  requirements.txt
translate_service/models/: schemas.py
translate_service/routers/: dict.py  translate.py
translate_service/services/: dictionary.py  html_translator.py  json_translator.py  translator.py  vllm_client.py
(+13 files in other folders)
