[project]
name = "tech-vietbyte-ai-api"
version = "0.2.0"
description = "VietByte AI API: Translation + Dictionary + OCR"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "A", "C4", "RET", "SIM"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
